Fix margin on mobile

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,9 @@ body {
   .container {
     flex-direction: column;
     padding: 15px;
-    align-items: center; 
+    align-items: center;
+    margin-top: 30px;
+    margin-bottom: 30px; 
   }
 
   .left-side, .right-side {
@@ -98,6 +100,10 @@ body {
   }
 
   .left-side {
-    padding-top: 30px;    
+    padding-top: 15px; 
+  }
+
+  .right-side {
+    padding-bottom: 15px; 
   }
 }
